# tp5

./: main.py  pyproject.toml  src.code-workspace
Punto_villanos/: Personaje.py  main.py
_tp5_env/: pyvenv.cfg
_tp5_env/Scripts/: activate.bat  dul-receive-pack  dul-upload-pack
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
tp5_env/Scripts/: activate
tp5_env/src/Punto_map/: sorted_table_map.py  sorted_table_map_client.py
