[tool.poetry]
name = "tp5"
version = "0.1.0"
description = ""
authors = ["Exequiel-Ansaldi <exeansaldi0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-ed-fcad-uner = {git = "https://github.com/nachonovello1984/python-ed-fcad-uner", rev = "main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
